なんとなく

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,3 +23,20 @@ setw -g window-status-current-bg white
 # 256 color
 set-option -g default-terminal screen-256color
 
+# マウス操作切替
+set-option -g mode-mouse          off
+set-option -g mouse-select-pane   off
+set-option -g mouse-resize-pane   off
+set-option -g mouse-select-window off
+bind-key m \
+    set -g mode-mouse          on \; \
+    set -g mouse-select-pane   on \; \
+    set -g mouse-resize-pane   on \; \
+    set -g mouse-select-window on \; \
+    display "Mouse: ON"
+bind-key M \
+    set -g mode-mouse          off \; \
+    set -g mouse-select-pane   off \; \
+    set -g mouse-resize-pane   off \; \
+    set -g mouse-select-window off \; \
+    display "Mouse: OFF"
