なんだっけ？

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set-option -g prefix C-x
 setw -g utf8 on
 set -g status-utf8 on
 
-# reload setting file with C-z C-r
+# reload setting file with C-x C-r
 bind C-r source-file ~/.tmux.conf
 
 # status bar
