いろいろ変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,12 @@ setw -g window-status-current-bg white
 # 256 color
 set-option -g default-terminal screen-256color
 
+# ペイン移動をVim風に
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # マウス操作切替
 set-option -g mode-mouse          off
 set-option -g mouse-select-pane   off
