--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,10 +30,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # マウス操作切替
-set-option -g mode-mouse          off
-set-option -g mouse-select-pane   off
-set-option -g mouse-resize-pane   off
-set-option -g mouse-select-window off
+set-option -g mode-mouse          on
+set-option -g mouse-select-pane   on
+set-option -g mouse-resize-pane   on
+set-option -g mouse-select-window on
 bind-key m \
     set -g mode-mouse          on \; \
     set -g mouse-select-pane   on \; \
