--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -s escape-time 0
 set-window-option -g mode-mouse on
 
 # prefix
-set-option -g prefix C-v
+set-option -g prefix C-x
 
 # japanese
 setw -g utf8 on
