--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,3 +46,20 @@ bind-key M \
     set -g mouse-resize-pane   off \; \
     set -g mouse-select-window off \; \
     display "Mouse: OFF"
+
+# アクティブなペインを目立たせる
+set -g pane-active-border-fg white
+set -g pane-active-border-bg yellow
+
+# コマンドラインの色を設定する
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+# ヴィジュアルのティフィケーションを有効にする
+setw -g monitor-activity on
+set -g visual-activity on
+
+# upper status bar
+# set -g status-position top
+
