--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,10 +47,6 @@ bind-key M \
     set -g mouse-select-window off \; \
     display "Mouse: OFF"
 
-# アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-
 # コマンドラインの色を設定する
 set -g message-fg white
 set -g message-bg black
@@ -61,5 +57,8 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # upper status bar
-# set -g status-position top
+set -g status-position top
 
+# ステータスバーの色を設定する
+set -g status-fg white
+set -g status-bg black
