tmuxでペインのリサイズを簡単に行えるように

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# ペインのリサイズをVim風に
+bind -r C-h resize-pane -L 5
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
+
 # マウス操作切替
 set-option -g mode-mouse          on
 set-option -g mouse-select-pane   on
