--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,13 @@
 # about copy
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+
 set -s escape-time 0
-set-window-option -g mode-mouse on
+# set-window-option -g mode-mouse on
 
 # prefix
 set-option -g prefix C-x
@@ -36,22 +41,24 @@ bind -r C-k resize-pane -U 5
 bind -r C-l resize-pane -R 5
 
 # マウス操作切替
-set-option -g mode-mouse          on
-set-option -g mouse-select-pane   on
-set-option -g mouse-resize-pane   on
-set-option -g mouse-select-window on
-bind-key m \
-    set -g mode-mouse          on \; \
-    set -g mouse-select-pane   on \; \
-    set -g mouse-resize-pane   on \; \
-    set -g mouse-select-window on \; \
-    display "Mouse: ON"
-bind-key M \
-    set -g mode-mouse          off \; \
-    set -g mouse-select-pane   off \; \
-    set -g mouse-resize-pane   off \; \
-    set -g mouse-select-window off \; \
-    display "Mouse: OFF"
+set-option -g mouse on
+
+# set-option -g mode-mouse          on
+# set-option -g mouse-select-pane   on
+# set-option -g mouse-resize-pane   on
+# set-option -g mouse-select-window on
+# bind-key m \
+#     set -g mode-mouse          on \; \
+#     set -g mouse-select-pane   on \; \
+#     set -g mouse-resize-pane   on \; \
+#     set -g mouse-select-window on \; \
+#     display "Mouse: ON"
+# bind-key M \
+#     set -g mode-mouse          off \; \
+#     set -g mouse-select-pane   off \; \
+#     set -g mouse-resize-pane   off \; \
+#     set -g mouse-select-window off \; \
+#     display "Mouse: OFF"
 
 # コマンドラインの色を設定する
 set -g message-fg white
@@ -68,3 +75,17 @@ set -g status-position top
 # ステータスバーの色を設定する
 set -g status-fg white
 set -g status-bg black
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
